Hide overflow and removed current fixes for smaller buttons on mobile
+brainstorming ways to make buttons look better and fit on screen on mobile

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
     color: #e9e9e9;
     background-color: #000;
     letter-spacing: 1.5px;
-    /* overflow: hidden; */
+    overflow: hidden;
     touch-action: manipulation;
 }
 
@@ -89,11 +89,5 @@ html, body {
     .text-row div {
         height: 52px;
         width: 52px;
-    }
-    .keyboard-row button {
-        width: 27px;
-    }
-    #k-enter, #k-backspace {
-        width: 60px;
     }
 }
